@@ -895,85 +895,3 @@
 	return self;
 }
 @end
-
-//
-// ParticleFlower
-//
-@implementation BigParticleFlower
--(id) init
-{
-	return [self initWithTotalParticles:50];
-}
-
--(id) initWithTotalParticles:(int) p
-{
-	if( !(self=[super initWithTotalParticles:p]) )
-		return nil;
-	
-	// duration
-	duration = -1;
-	
-	// gravity
-	gravity.x = 0;
-	gravity.y = 0;
-	
-	// angle
-	angle = 90;
-	angleVar = 360;
-	
-	// speed of particles
-	speed = 160;
-	speedVar = 20;
-	
-	// radial
-	radialAccel = -120;
-	radialAccelVar = 0;
-	
-	// tagential
-	tangentialAccel = 30;
-	tangentialAccelVar = 0;
-	
-	// emitter position
-	position.x = 160;
-	position.y = 240;
-	posVar.x = 0;
-	posVar.y = 0;
-	
-	// life of particles
-	life = 4;
-	lifeVar = 1;
-	
-	// size, in pixels
-	startSize = 150.0f;
-	startSizeVar = 50.0f;
-	endSize = kParticleStartSizeEqualToEndSize;
-
-	// emits per second
-	emissionRate = totalParticles/life;
-	
-	// color of particles
-	startColor.r = 0.50f;
-	startColor.g = 0.50f;
-	startColor.b = 0.50f;
-	startColor.a = 1.0f;
-	startColorVar.r = 0.5f;
-	startColorVar.g = 0.5f;
-	startColorVar.b = 0.5f;
-	startColorVar.a = 0.5f;
-	endColor.r = 0.0f;
-	endColor.g = 0.0f;
-	endColor.b = 0.0f;
-	endColor.a = 1.0f;
-	endColorVar.r = 0.0f;
-	endColorVar.g = 0.0f;
-	endColorVar.b = 0.0f;
-	endColorVar.a = 0.0f;
-	
-	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.png"];
-	
-	// additive
-	blendAdditive = YES;
-	
-	return self;
-}
-@end
